# simple-analytics

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DESIGN.md  Makefile  PLAN.md  docker-compose.yml  main.py  manage.py  pyproject.toml
analytics_backend/: asgi.py  settings.py  urls.py  wsgi.py
events/: authentication.py  models.py  models_aggregation.py  serializers.py  tests.py  throttling.py  urls.py  views.py  views_dashboard.py  workers.py
events/management/commands/: aggregate_events.py  cleanup_events.py  event_status.py  process_events.py  test_event_ingestion.py
events/migrations/: 0001_initial.py  0002_add_aggregation_models.py  0003_fiveminuteeventaggregation.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Dashboard.tsx  EventLog.tsx  FiltersPanel.tsx  MetricsPanel.tsx  TimeSeriesChart.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
projects/: models.py
projects/migrations/: 0001_initial.py  0002_remove_project_projects_api_key_c7f915_idx_and_more.py
tests/: conftest.py
tests/fixtures/: test_factories.py
tests/unit/: test_authentication.py  test_dashboard_api.py  test_models.py
